Address some findbugs issues
git-svn-id: https://svn.code.sf.net/p/jumble/code/trunk@784 3c96dea9-a453-4bd5-b869-110af7cb2dd7